--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
   "scripts": {
     "dev": "ts-node src/index.ts",
     "watch": "nodemon",
+    "trace": "set DEBUG=express:* & npm run watch",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint src/**/*.ts --fix",
-    "lint:staged": "lint-staged",
-    "build": "tsc",
+    "compile": "tsc",
+    "build": "npm run compile && npm run copy-public && npm run copy-views",
+    "copy-public": "ts-node copy-public.ts",
+    "copy-views": "ts-node copy-views.ts",
     "start": "node dist/index.js"
   },
   "keywords": [
@@ -25,9 +28,12 @@
   "author": "Jose Carballosa",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.2",
     "@types/node": "^12.12.11",
+    "@types/shelljs": "^0.8.6",
     "@typescript-eslint/eslint-plugin": "^2.8.0",
     "@typescript-eslint/parser": "^2.8.0",
+    "dotenv": "^8.2.0",
     "eslint": "^6.6.0",
     "eslint-config-prettier": "^6.7.0",
     "eslint-plugin-prettier": "^3.1.1",
@@ -35,7 +41,12 @@
     "lint-staged": "^9.4.3",
     "nodemon": "^1.19.4",
     "prettier": "^1.19.1",
+    "shelljs": "^0.8.3",
     "ts-node": "^8.5.2",
     "typescript": "^3.7.2"
+  },
+  "dependencies": {
+    "ejs": "^2.7.4",
+    "express": "^4.17.1"
   }
 }
